Implementacion de seguridad, imagen, mail

--- a/src/main/resources/templates/EditarPerfilDesarrollador.html
+++ b/src/main/resources/templates/EditarPerfilDesarrollador.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mi Perfil</title>
 </head>
 <body>
     <div>
-        <form action="/creacionPerfil" method="POST">
+        <form action="/editar_desarrollador" method="PUT" enctype="multipart/form-data">
             <label>Nombre</label>
             <input type="text" name="nombre">
             </br>
@@ -19,9 +19,10 @@
             <input type="text" name="descripcion">
             </br>
             <label >Imagen</label>
-            <input type="file" name="imagen">
+            <input type="file" name="archivo">
             </br>
-            <button type="submit">Enviar Datos</button>
+            <button type="submit"><a href="/usuario">Actualizar</a></button>
+            <button><a href="/desarrollador">Volver</a></button>
         </form>
     </div>
 </body>
