Correccion de errores

--- a/src/main/resources/templates/CrearPerfilDesarrollador.html
+++ b/src/main/resources/templates/CrearPerfilDesarrollador.html
@@ -21,7 +21,7 @@
             <label >Imagen</label>
             <input type="file" name="archivo">
             </br>
-            <button type="submit"><a href="/usuario">Crear mi perfil</a></button>
+            <button type="submit"><a href="/">Crear mi perfil</a></button>
             <button><a href="/">Inicio</a></button>
         </form>
     </div>
